--- a/a.html
+++ b/a.html
@@ -10,23 +10,28 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
 
     </script>
-    <style>
-        .col {
-            text-align: center;
-            border: 5px solid red;
-        }
-    </style>
 </head>
 
-<body>
-    <h3>Equal width colums grid</h3>
+<body style="text-align: center;">
     <div class="container">
-        <div class="row">
-            <div class="col">column1</div>
-            <div class="col">column2</div>
-            <div class="col">column3</div>
-        </div>
+        <h1>Headings</h1>
+        <h1 class="display-1">Codingal</h1>
+        <h1 class="display-2">Codingal</h1>
+        <h1 class="display-3">Codingal</h1>
+        <h1 class="display-4">Codingal</h1>
+
     </div>
+    <div class="container">
+        <h1> Lighter,secondary haedings
+            <small class="text-muted">Hello Codingal</small>
+        </h1>
+
+        <dl>
+            <dt>Coffee</dt>
+            <dd>White hot coffee</dd>
+        </dl>
+    </div>
+
 </body>
 
 </html>
