--- a/b.html
+++ b/b.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
-
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+
     </script>
 </head>
 
 <body>
+    <p> CO <sub>2</sub></p>
+    <p>2<sup>3</sup></p>
+
     <div class="container">
-        <h1>Hello Students!</h1>
-
-        <div class="row">
-            <!--Size Medium and extra small-->
-            <div class="col-md-8 col-xs-4" style="background-color:red; border: 3pxpx solid black;">xs </div>
-        </div>
-        <div class="row">
-            <!--Size Large, medium and extra small-->
-            <div class="col-md-12 col-lg-6" style="background-color:lavenderblush;">b</div>
-        </div>
-        <div class="row" style="background-color:lightcyan;">
-            <!--Size extra small-->
-            <div class="col-xs-6">a</div>
-
-        </div>
+        <h1>Highlighted text</h1>
+        <p>use mark to hughlight<mark>highlight</mark>text</p>
+    </div>
+    <div class="container">
+        <h1>codingal</h1>
+        <p>inline snippets</p>
+        <p>In codingal we learn various things like <code>HTML</code>,<code>PYTHON</code> and
+            <code>MORE INTERESTING LANGUAGES</code></p>
     </div>
 </body>
 
